change some file names

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <!-- Javascript Source Files -->
-    <script src="index.js"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
